# matmul

./: .clang-format  .gitignore  CMakeLists.txt  Class_1_Notes.md  Class_2_Notes.md  Class_3_Notes.md  License  Matrix.txt  README.md  cacheblocking.txt  cacheresonance.txt  doxygen.config
cmake/: ClangFormat.cmake  Doxygen.cmake  Testing.cmake
resonance/: CMakeLists.txt  resonance.cpp
src/: CMakeLists.txt  main.cpp  parallel.cpp
src/multiply/: CMakeLists.txt  method1.cpp  method2.cpp  method3.cpp  multiply.cpp
src/multiply/include/: method1.h  method2.h  method3.h  multiply.h
src/timing/: CMakeLists.txt  timing.cpp
test/: CMakeLists.txt  test_multiply.cpp
